lets make authentication work
